[gd_scene load_steps=5 format=3 uid="uid://wsyiamduvmqd"]

[ext_resource type="PackedScene" uid="uid://qeam3vktj2j1" path="res://testing_stuff_kaen/stairs/stair_classic_1.glb" id="1_c0r0l"]
[ext_resource type="Material" uid="uid://daufacvfln14l" path="res://placeholders/modular_level_builds/placeholder/floor_2x_2m_variant_4.tres" id="2_djt0v"]
[ext_resource type="Script" path="res://testing_stuff_kaen/stairs_gd/stair_classic1.gd" id="2_iyc71"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1blgm"]
size = Vector3(2, 0.3, 4)

[node name="stair_classic_1" instance=ExtResource("1_c0r0l")]
script = ExtResource("2_iyc71")

[node name="Cube" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.143558, 0)
material_override = ExtResource("2_djt0v")

[node name="StairEnd" type="Node3D" parent="Cube" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.156442, 0)

[node name="StaticBody3D_WorldPhysics" type="StaticBody3D" parent="." index="1"]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D_WorldPhysics" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.15, 0)
shape = SubResource("BoxShape3D_1blgm")

[node name="StaticBody3D_PlayerPhysics" type="StaticBody3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.0896051, 0)
collision_layer = 2

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="StaticBody3D_PlayerPhysics" index="0"]
depth = 4.0
polygon = PackedVector2Array(0.297887, -0.0890035, -1.7, 0.2, -1.7, -0.1)
